<resources>
    <string name="app_name">cmput301f24mikasa</string>
    <string name="home">HOME</string>
    <string name="profiles">Profiles</string>
    <string name="events">Events</string>
    <string name="notifications">Notifications</string>
    <string name="admin">Admin</string>
    <string name="profiles_caps">PROFILES</string>
    <string name="user_profile">User Profile</string>
    <string name="facility_profile">Facility Profile</string>
    <string name="user_profile_caps">USER PROFILE</string>
    <string name="name">Name</string>
    <string name="email">e-mail</string>
    <string name="phone_number">phone number (optional)</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="create_event">CREATE EVENT</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="create_event_small_caps">Create Event</string>
    <string name="qr_code_description">QR Code</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="enter_facility_name">Enter Facility Name</string>
    <string name="enter_facility_location">Enter Facility Location</string>
    <string name="enter_facility_description">Enter Facility Description</string>
    <string name="update">Update</string>
    <string name="facility_profile_caps">FACILITY PROFILE</string>
    <string name="events_caps">EVENTS</string>
    <string name="manage_events">Manage Events</string>
    <string name="events_signed_up_for">Events Signed Up For</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="upload_poster">Upload poster</string>
    <string name="date_example">MM/DD/YYYY</string>
    <string name="an_image_of_your_event">An image of your event</string>
    <string name="list_of_events">List of Events</string>
    <string name="event_title">Event Title</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="waiting_list_for_insert_event">WAITING LIST FOR \'INSERT\' EVENT</string>
    <string name="manage_waitlist">Manage Waitlist</string>
    <string name="sample">Sample</string>
    <string name="username_and_info_if_any">USERNAME AND INFO IF ANY</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="upload_qr_code">Upload QR Code</string>
    <string name="sign_up">Sign Up</string>
    <string name="search_facilities">Search Facilities</string>
    <string name="facility_name">Facility Name</string>
    <string name="admin_panel">ADMIN PANEL</string>
    <string name="manage_facilities">Manage Facilities</string>
    <string name="manage_profiles">Manage Profiles</string>
    <string name="manage_images">Manage Images</string>
    <string name="manage_all_events">Manage All Events</string>
    <string name="notification_text">Notification Text</string>
    <string name="events_signed_up_for_caps">EVENTS SIGNED UP FOR</string>
    <string name="you_haven_t_signed_up_for_any_events_yet">You haven\'t signed up for any events yet.</string>
    <string name="event_date">Event Date</string>
    <string name="event_description">Event Description</string>
    <string name="price_0_00">Price: $0.00</string>
    <string name="unjoin">Unjoin</string>
    <string name="reload">Reload</string>
    <string name="settings">Settings</string>
    <string name="notification_settings">Notifications Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="unjoin_waitlist">Unjoin Waitlist</string>
    <string name="event_details">Event Details</string>
    <string name="user_name">User Name</string>
    <string name="profile_image">Profile Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="image_preview">image preview</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_poster">Delete Poster</string>
    <string name="remove_poster">Remove Poster</string>
    <string name="UnjoinWaitlist">unjoin\n</string>
    <string name="Unjoin">Unjoin</string>
    <string name="facility_image">facility image</string>
    <string name="event_name">Event Name</string>
    <string name="manage">Manage</string>
    <string name="delete_qr_code">Delete QR Code</string>
    <string name="list_of_profiles">List of Profiles</string>
    <string name="list_of_facilities">List of Facilities</string>
    <string name="facility_details">Facility Details</string>
    <string name="profile_details">Profile Details</string>
    <string name="location">Location eg. Edmonton, Alberta (optional)</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_full_province_eg_alberta">Enter full Country (eg. Canada)</string>
    <string name="require_geo_location">Require Geo-Location</string>
    <string name="notify_waitlist">Notify Waitlist</string>

    // Open Cage API Key
    <string name="open_cage_api_key">355ec37ef230433bb0ec1f98a0b4c221</string>
    <string name="managing_list_for_event">Managing List for Event</string>
    <string name="view_map">View Map</string>
    <string name="view_result_list">View Result List</string>
    <string name="notify">Notify</string>
    <string name="create_poster">Create Poster</string>
    <string name="create_event_lowercase">Create Event</string>
    <string name="final_list_for_event">Final List for Event</string>
    <string name="date_colon">Date:</string>
    <string name="price_colon">Price:</string>
    <string name="location_only">Location</string>
    <string name="how_many_participants_would_you_like_to_sample">How many participants would you like to sample?</string>
    <string name="current_entrants_0">Current Entrants = 0</string>
    <string name="enter_number">Enter number</string>
    <string name="cancel">Cancel</string>
    <string name="generate">Generate</string>

    //HOME SCREEN
    <string name="event">Image of an event</string>

    <string name="navigation_instructions_header">Navigation Instructions:</string>
    <string name="navigation_instructions">• Press the home icon to return to this home screen.\n
                                            \n• Press the profile icon to manage your profiles.\n
                                            \n• Press the calendar icon to access the QR scanner, view your signed up events, create an event, or manage your created events.\n
                                            \n• Press the notifications icon to view and respond to any of your event alerts.\n
                                            \n• Press the admin icon to manage any created facilities, profiles, and events (for admins only). </string>string>



</resources>
