<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0D47A1"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/facility_details"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold" />


    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/tv_facility_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facility_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tv_facility_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_marginTop="20dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_facility_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginTop="20dp"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/facility_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/facility_image"
        android:scaleType="fitCenter"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/remove_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete_image"
        android:textColor="#FFFFFF"
        android:backgroundTint="#0D47A1"
        android:layout_marginTop="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0D47A1"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="start|bottom" />
</LinearLayout>
